--- a/css/common.css
+++ b/css/common.css
@@ -106,6 +106,14 @@ legend.sync-block {
   border-color: #999 #999 snow;
 }
 
+.span-xx-large{
+  font-size: xx-large;
+}
+
 .span-x-large{
   font-size: x-large;
+}
+
+.span-large{
+  font-size: large;
 }
