--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ body{
     background: white;
 }
 
-#tactics-description{
+.text-right{
     float: right;
 }
 
@@ -76,23 +76,174 @@ body{
     min-width: 240px;
 }
 
+#tactics-console{
+    border: 2px solid #bbb;
+    margin-top: 10px;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    display: table; 
+}
 
+#tactics-content-description{
+    border: 4px double#bbb;
+    width: 100%;
+    white-space: initial;
+    padding: 5px 10px;
+}
 
+#tactics-args{
+    padding-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 10px 80px 50px 1fr 10px 80px 50px 1fr 10px 80px 0px;
+    align-items: center;
+}
 
-#display-page{
+#tactics-args >*{
+    margin-bottom: 20px;
+}
+
+#ctrl-pannel{
+    padding: 10px 0px;
     position: relative;
 }
 
-#display-title{
-    font-size: x-large;
+.click-btn-v2{
+    height: 35px;
+    width: 150px;
+    background: #66DDAA;
+    font-size: larger;
+    font-family: inherit;
+    margin-right: 30px;
 }
 
-#display-output{
-    border: 2px solid #bbb;
-    margin-top: 45px;
+.click-btn-v2:hover {
+    background-color: #58bc9b;
+}
+
+.last-button{
+    position: absolute;
+    right: 3px;
+    width: 150px;
+    margin-right: 0px;
+}
+
+/* table */
+table {
+    border-collapse: collapse;
     width: 100%;
-    min-height: 300px;
-    white-space: pre;
+    table-layout: fixed;
+    border: 1px solid silver;
+    margin-top: 50px;
+}
+
+td,
+th {
+    padding: 8px;
+    word-break: break-all;
+}
+
+td{
+    border: none;
+}
+
+th {
+    color: white;
+    border: 1px solid silver;
+    background: #535353;
+}
+
+button.remove{
+    font-family: fantasy;
+}
+
+.remove{
+    display: grid;
+}
+
+#th-name{
+    width: 150px;  
+}
+
+#th-del{
+    width: 50px;  
+}
+
+#display-page{
+    position: relative;
+    margin-top: 50px;
+}
+
+fieldset.scan-block {
+    border: 2px groove #ddd;
+    padding: 0 20px 20px 20px;
+    box-shadow:  0px 0px 0px 0px #000;
+}
+
+legend.scan-block {
+    width:inherit;
+    padding:0 10px;
+    border-bottom:none;
+    font-size: xx-large;
+}
+
+.scan-output{
+    border: 2px solid #bbb;
+}
+
+.output-stage1{
+    margin: 10px;
+    display: grid;
+    grid-template-columns: 200px 550px auto;
+    align-items: center;
+}
+
+.output-norn-image{
+    text-align: left;
+}
+
+.output-info1{
+    height: 100%;
+}
+
+.output-info1-baseinfo{
+    padding-top:10px;
+    display: grid;
+    grid-template-columns: 150px 30px 150px 30px 150px 30px;
+    align-items: center;
+}
+
+.base-data{
+    border-bottom: 1px solid #bbb;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.base-data-value{
+    position: absolute;
+    right: 0px;
+}
+
+.output-info2{
+    text-align: center;
+}
+
+.bomb-icon{
+    margin-top: 10px;
+    height: 150px;
+}
+
+.bomb-rate{
+    padding-top: 20px;
+    font-size: 60px;
+    text-align: center;
+}
+
+.output-stage2{
+    margin: 10px;
+    min-height: 100px;
+    border: 2px solid #bbb;
+    padding: 10px;
 }
 
 .footer-page{
